# renovate-gitea-sharding

./: Cargo.toml  config.json
ci/: Cargo.toml
ci/src/: main.rs
crates/renovate-gitea-sharding/: Cargo.toml
crates/renovate-gitea-sharding/src/: main.rs
