[workspace]
members = ["crates/renovate-gitea-sharding", "ci"]

[workspace.dependencies]

tokio = { version = "1.26.0", features = ["full"] }
eyre = { version = "0.6.8" }
color-eyre = { version = "0.6.2" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
dagger-sdk = { version = "0.2.22" }
reqwest = { version = "0.11.15" }
dotenv = { version = "0.15.0" }
